# test_gtsam

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  estimated.txt  main.cpp  main_back.cpp  main_back_2.cpp  states.txt  states_x_down.txt
mh_01/: raw_imu.txt  raw_vo.txt
script/: scale_visualization.py  states.html  visualize.py
v1_01/: raw_imu.txt  raw_vo.txt  raw_vo_kf.txt
